--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^6.1.0",
     "express-session": "^1.15.6",
     "massive": "^5.5.0",
+    "material-ui": "^0.20.2",
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
