--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^6.12.1"
   },
   "scripts": {
     "start": "react-scripts start",
