--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "massive": "^5.5.0",
     "material-ui": "^0.20.2",
     "moment": "^2.22.2",
+    "nodemailer": "^4.6.8",
+    "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
