--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aws-sdk": "^2.337.0",
+    "aws-sdk": "^2.347.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
@@ -15,10 +15,13 @@
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-dropzone": "^7.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-spinners": "^0.4.7",
     "react-stripe-checkout": "^2.6.3",
-    "stripe": "^6.12.1"
+    "stripe": "^6.12.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
