--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-ui": "^0.20.2",
     "moment": "^2.22.2",
     "nodemailer": "^4.6.8",
+    "nodemon": "^1.18.5",
     "npm": "^6.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
